# lumio-framework

./: .gitignore  README.md
aptos-framework/: Move.toml
aptos-framework/doc/: account.md  aggregator_factory.md  aptos_account.md  block.md  chain_id.md  chain_status.md  code.md  coin.md  consensus_config.md  create_signer.md  event.md  evm.md  execution_config.md  fungible_asset.md  gas_schedule.md  genesis.md  managed_coin.md  multisig_account.md  native_coin.md  object.md  optional_aggregator.md  overview.md  primary_fungible_store.md  reconfiguration.md  resource_account.md  state_storage.md  storage_gas.md  system_addresses.md  timestamp.md  transaction_context.md  transaction_fee.md  transaction_validation.md  util.md  version.md
aptos-framework/sources/: aptos_account.move  aptos_account.spec.move  block.move  block.spec.move  coin.move  evm.move  genesis.move  multisig_account.move  (+10 more)
aptos-token/: Move.toml
aptos-token-objects/: Move.toml
lumio-framework/: Move.toml
lumio-l2-contracts/: ICrossVM.sol  README.md
lumio-stdlib/: Move.toml
lumio-token/: Move.toml
lumio-token-objects/: Move.toml
move-stdlib/: Cargo.toml
move-stdlib/doc/: acl.md  bcs.md  bit_vector.md  cmp.md  error.md  features.md  fixed_point32.md  hash.md  mem.md  option.md  overview.md  signer.md  string.md  vector.md  vector_ext.md
move-stdlib/sources/: bcs.move
move-stdlib/sources/configs/: features.move  features.spec.move
move-stdlib/src/: lib.rs
move-stdlib/src/natives/: bcs.rs  cmp.rs  hash.rs  mem.rs  mod.rs  signer.rs  string.rs  unit_test.rs  vector.rs
(+442 files in other folders)
