[package]
name = "aptos-move-stdlib"
version = "0.1.1"
edition = "2021"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem stdlib"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cstd.workspace = true
either.workspace = true
anyhow.workspace = true
aptos-gas-schedule.workspace = true
aptos-native-interface.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
move-vm-runtime.workspace = true
move-vm-types.workspace = true
smallvec.workspace = true
hex.workspace = true
sha2.workspace = true
sha3.workspace = true

#move-docgen.workspace = true
#move-errmapgen.workspace = true
#move-prover.workspace = true
#log.workspace = true
#walkdir.workspace = true
#move-command-line-common.workspace = true
#move-compiler.workspace = true

[dev-dependencies]
# local
move-cli.workspace = true
move-package.workspace = true
move-unit-test.workspace = true

dir-diff.workspace = true
file_diff.workspace = true
tempfile.workspace = true

[features]
testing = []
std = [
    "cstd/std",
    "aptos-gas-schedule/std",
    "aptos-native-interface/std",
    "move-binary-format/std",
    "move-core-types/std",
    "move-vm-runtime/std",
    "move-vm-types/std",
]
